fin_account_detail_fail

--- a/src/assets/i18n/es.json
+++ b/src/assets/i18n/es.json
@@ -55,5 +55,8 @@
   "INTERESRATE_MONTHLY": "% interés mensual",
   "BRANCH_INFORMATION":"Información de la sucursal",
   "CUSTOMERS_INFORMATION":"Clientes de la sucursal",
-  "BALANCE":"Balance"
+  "BALANCE":"Balance",
+  "VIEWS": "Vistas",
+  "WELCOME TO BANK MANAGER APP": "BIENVENIDO A LA APLICACION DE GESTION BANCARIA"
+
 }
